// $Id: CHANGELOG.txt,v 1.272 2008/07/17 21:10:38 dries Exp $

Drupal 7.0, xxxx-xx-xx (development version)
----------------------
- Security:
    * Protected cron.php -- cron will only run if the proper key is provided.
    * Changed to much stronger password hashes that are also compatible with the
      Portable PHP password hashing framework.
    * Implemented a pluggable password hashing API that supports alternative
      hashing and authentication schemes.
- Usability:
    * Implemented drag-and-drop positioning for input format listings.
    * Implemented drag-and-drop positioning for poll options.
    * Provided descriptions for user permissions.
    * Removed comment controls for users.
    * Removed display order settings for comment module. Comment display
      order can now be customised using the Views module.
    * Added more features to the default install profile, and a new
      slimmed down install profile for developers.
    * Image toolkits are added by modules instead of being copied to
      the includes directory.
- Search:
    * Added support for language-aware searches.
- Testing:
    * Added test framework and tests.
- Removed ping module:
    * Contributed modules with similar functionality are available.
- Refactored the "access rules" component of user module:
    * The user module now provides a simple interface for blocking single
      IP addresses. Previous user module functionality for restricting certain
      e-mail addresses and usernames are available as a contributed module.
      Further, IP address range blocking is no longer supported and should be
      implemented at the operating system level.
- Removed throttle module:
    * Alternative methods for improving performance are available in other core and
      contributed modules.
- Added code registry:
    * Modules now declare their includable files via their .info file.  That
      allows Drupal to scan files when a module is enabled and then lazy-load