@@ -1,4 +1,4 @@
-// $Id: CHANGELOG.txt,v 1.272 2008/07/17 21:10:38 dries Exp $
+// $Id: CHANGELOG.txt,v 1.273 2008/08/03 05:46:54 dries Exp $
 
 Drupal 7.0, xxxx-xx-xx (development version)
 ----------------------
@@ -19,6 +19,8 @@ Drupal 7.0, xxxx-xx-xx (development version)
       slimmed down install profile for developers.
     * Image toolkits are added by modules instead of being copied to
       the includes directory.
+- News aggregator:
+    * Added OPML import functionality for RSS feeds.
 - Search:
     * Added support for language-aware searches.
 - Testing:
